--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="StanbicIBTC CSR"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://stanbicibtc-csr.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -19,6 +19,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+FILESYSTEM_DRIVER=public
 
 MEMCACHED_HOST=127.0.0.1
 
