--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-create-project-config": [
+            "composer run-script post-create-project-cmd",
+            "@php artisan migrate --seed",
+            "@php artisan storage:link"
         ]
     }
 }
